[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Calculator.gd" type="Script" id=1]

[node name="Click Me" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 384.0
margin_top = 192.0
margin_right = 640.0
margin_bottom = 576.0
color = Color( 0.282353, 0.278431, 0.278431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 392.0
margin_top = 200.0
margin_right = 632.0
margin_bottom = 248.0
color = Color( 0.45098, 0.45098, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 624.0
margin_bottom = 248.0
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="."]
margin_left = 520.0
margin_top = 328.0
margin_right = 568.0
margin_bottom = 376.0
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="."]
margin_left = 456.0
margin_top = 328.0
margin_right = 504.0
margin_bottom = 376.0
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="."]
margin_left = 392.0
margin_top = 328.0
margin_right = 440.0
margin_bottom = 376.0
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="."]
margin_left = 520.0
margin_top = 392.0
margin_right = 568.0
margin_bottom = 440.0
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="."]
margin_left = 456.0
margin_top = 392.0
margin_right = 504.0
margin_bottom = 440.0
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = 392.0
margin_top = 392.0
margin_right = 440.0
margin_bottom = 440.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 520.0
margin_top = 456.0
margin_right = 568.0
margin_bottom = 504.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 456.0
margin_top = 456.0
margin_right = 504.0
margin_bottom = 504.0
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="."]
margin_left = 392.0
margin_top = 456.0
margin_right = 440.0
margin_bottom = 504.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button0" type="Button" parent="."]
margin_left = 456.0
margin_top = 520.0
margin_right = 504.0
margin_bottom = 568.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDot" type="Button" parent="."]
margin_left = 520.0
margin_top = 520.0
margin_right = 568.0
margin_bottom = 568.0
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMultiply" type="Button" parent="."]
margin_left = 584.0
margin_top = 328.0
margin_right = 632.0
margin_bottom = 376.0
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMinus" type="Button" parent="."]
margin_left = 584.0
margin_top = 392.0
margin_right = 632.0
margin_bottom = 440.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlus" type="Button" parent="."]
margin_left = 584.0
margin_top = 456.0
margin_right = 632.0
margin_bottom = 504.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDivide" type="Button" parent="."]
margin_left = 584.0
margin_top = 264.0
margin_right = 632.0
margin_bottom = 312.0
text = "÷"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonEqual" type="Button" parent="."]
margin_left = 584.0
margin_top = 520.0
margin_right = 632.0
margin_bottom = 568.0
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClear" type="Button" parent="."]
margin_left = 392.0
margin_top = 264.0
margin_right = 440.0
margin_bottom = 312.0
text = "©"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackspace" type="Button" parent="."]
margin_left = 456.0
margin_top = 264.0
margin_right = 504.0
margin_bottom = 312.0
text = "<="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPercentage" type="Button" parent="."]
margin_left = 520.0
margin_top = 264.0
margin_right = 568.0
margin_bottom = 312.0
text = "%"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button9" to="." method="Button9"]
[connection signal="pressed" from="Button8" to="." method="Button8"]
[connection signal="pressed" from="Button7" to="." method="Button7"]
[connection signal="pressed" from="Button6" to="." method="Button6"]
[connection signal="pressed" from="Button5" to="." method="Button5"]
[connection signal="pressed" from="Button4" to="." method="Button4"]
[connection signal="pressed" from="Button3" to="." method="Button3"]
[connection signal="pressed" from="Button2" to="." method="Button2"]
[connection signal="pressed" from="Button1" to="." method="Button1"]
[connection signal="pressed" from="Button0" to="." method="Button0"]
[connection signal="pressed" from="ButtonDot" to="." method="ButtonDot"]
[connection signal="pressed" from="ButtonMultiply" to="." method="ButtonMultiply"]
[connection signal="pressed" from="ButtonMinus" to="." method="ButtonMinus"]
[connection signal="pressed" from="ButtonPlus" to="." method="ButtonPlus"]
[connection signal="pressed" from="ButtonDivide" to="." method="ButtonDivide"]
[connection signal="pressed" from="ButtonEqual" to="." method="ButtonEqual"]
[connection signal="pressed" from="ButtonClear" to="." method="ButtonClear"]
[connection signal="pressed" from="ButtonBackspace" to="." method="ButtonBackspace"]
[connection signal="pressed" from="ButtonPercentage" to="." method="ButtonPercentage"]
